--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "unity-dino-game-tutorial-main.sln"
+    "dotnet.defaultSolution": "Open-closeGame.sln"
 }
